--- a/index.html
+++ b/index.html
@@ -3,298 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Herr+Von+Muellerhoff&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&family=PT+Serif:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="bootstrap.min.css" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnMj8Xc5_jA0tqVHCoFHCk-2sHt4imItA&callback=initMap&libraries=&v=weekly" defer></script>
-
-
-    <title>RIMANY</title>
-
-
+    <meta name="viewort" content="widht=device-width, initial-scale=1.0">
+    <title>Lab 3</title>
 </head>
 
-<body>
-    <div class="preloader">
-        <svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <path fill="currentColor" d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
-            </path>
-        </svg>
-    </div>
+<body bgimage="url:">
+<script>
 
-    <div class="menu"> <span> </span></div>
-    <nav id="nav">
-        <ul class="main">
-            <li><a target="_blank" href="#">Home</a></li>
-            <li><a target="_blank" href="#men">Menu</a></li>
-            <li><a target="_blank" href="#booking">Reservations</a></li>
-            <li><a target="_blank" href="#aboutus">About us</a></li>
-            <li><a target="_blank" href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="overlay"></div>
+var numbers="";    
 
-    <script>
-        $('.menu, .overlay').click(function() {
-            $('.menu').toggleClass('clicked');
+for(var i=1;i<=11;i=i+3){
 
-            $('#nav').toggleClass('show');
+    numbers=numbers+i;
 
-        });
+}
 
-    </script>
-    <div class="mainbg">
-        <div class="main_text">
-            <h1 class="wel">Welcome </h1>
-            <h2 class="rim">THE RIMANY</h2>
-            <p class="read">READY TO BE OPENED</p><br>
-            <a id="reserv" href="#booking">Reserve a table</a>
-        </div>
-    </div>
-    <div class="cardB">
-        <div class="discover">
-            <h1 class="dis" id="aboutus">Discover </h1>
-            <h2 class="stor">OUR RESTAURANT</h2>
-            <figure class="fig">
-                <img src="https://images.pexels.com/photos/776538/pexels-photo-776538.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Барельеф" class="imgdis">
-                <p class="textdiv">In our restaurant one of the most unique designs is not only the facade of the restaurant, but also the decorations inside the institution. At any time of the year, you can choose one of four designs and dive into one of the New Year's days.</p>
+document.write(numbers);
 
-            </figure>
-        </div>
-        <div class="container-fluid mt-5" style="background-color: rgba(0, 0, 0, 0.59)">
-            <div class="container p-5">
-                <div class="card-deck">
-                    <div class="card text-center" style="width:20rem">
-                        <img src="https://images.pexels.com/photos/4834891/pexels-photo-4834891.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" class="card-img-top">
-                        <div class="card-body">
-                            <h4 class="card-title">Winter New-York</h4>
-                            <p class="card-text">Immerse yourself in the atmosphere of Christmas.</p>
-                            <a href="" class="btn btn-outline-secondary text-dark">READ MORE</a>
-                        </div>
-                    </div>
-                    <div class="card text-center" style="width:20rem">
-                        <img src="https://images.pexels.com/photos/1035342/pexels-photo-1035342.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" class="card-img-top">
-                        <div class="card-body">
-                            <h4 class="card-title">Spring Paris</h4>
-                            <p class="card-text">Find yourself in spring Paris</p>
-                            <a href="" class="btn btn-outline-secondary text-dark">READ MORE</a>
-                        </div>
-                    </div>
-                    <div class="card text-center" style="width:20rem">
-                        <img src="https://images.pexels.com/photos/1076240/pexels-photo-1076240.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" class="card-img-top">
-                        <div class="card-body">
-                            <h4 class="card-title">Summer Sicily</h4>
-                            <p class="card-text">Relax in summer Sicily</p>
-                            <a href="" class="btn btn-outline-secondary text-dark">READ MORE</a>
-                        </div>
-                    </div>
-                    <div class="card text-center" style="width:20rem">
-                        <img src="https://images.pexels.com/photos/3264706/pexels-photo-3264706.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260 " alt="" class="card-img-top">
-                        <div class="card-body">
-                            <h4 class="card-title">Autumn Saint Petersburg</h4>
-                            <p class="card-text">Get rid of the autumn blues in autumn St. Petersburg</p>
-                            <a href="" class="btn btn-outline-secondary text-dark">READ MORE</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id=men>
-            <div class="header">
-                <div id="icon" onclick="window.location.reload()" onmouseover="big(this)" onmouseout="small(this)">
-                </div>
-
-                <div id="menu1" onclick="change(this)" onmouseover="big(this)" onmouseout="small(this)">MENU</div>
-
-                <div id="foie_gras" onclick="change(this)" onmouseover="big(this)" onmouseout="small(this)">FOIE GRASS</div>
-
-                <div id="about_us" onclick="change(this)" onmouseover="big(this)" onmouseout="small(this)">CONFIT DE CANARD </div>
-
-                <div id="contacts" onclick="change(this)" onmouseover="big(this)" onmouseout="small(this)">SOUPE A L'OIGNON</div>
-
-            </div>
-            <div class="man">
-                <img class="pic" id="img" src="pexels-fidel-hajj-2814828.jpg" alt="car" width="600px">
-                <div class="text">
-                    <h2 id=text1>La Rimany restaurant</h2>
-                    <p id="text2">Tender juicy veal tendre topped with creamy sauce. Served on a bed of baked potatoes with rosemary. The aroma is excellent. The taste is amazing. This is just a miracle, not a dish, and this is just one dish</p>
-                </div>
-            </div>
-
-            <script type="text/javascript" src="script.js"></script>
-        </div>
-    </div>
-    <div class="line">
-
-    </div>
-    <div class="all">
-        <div id="booking" class="section">
-            <div class="section-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="booking-cta">
-                            <h1>Make Your Reservation</h1>
-                        </div>
-                        <div class="booking-form">
-                            <form>
-                                <div class="col-md-8">
-                                    <div class="form-group">
-                                        <span class="form-label">Name</span>
-                                        <input class="form-control" type="text" placeholder="Enter your first and last name">
-                                    </div>
-                                </div>
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <span class="form-label">Guests</span>
-                                        <select class="form-control">
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                            <option>More</option>
-                                        </select>
-                                        <span class="select-arrow"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <span class="form-label">Children</span>
-                                        <select class="form-control">
-                                            <option>0</option>
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>More</option>
-                                        </select>
-                                        <span class="select-arrow"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <span class="form-label">Date</span>
-                                        <input class="form-control" type="date" required>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-btn">
-                                        <button href="pop" class="submit-btn">Check availability</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            <footer class="site-footer" id="contact">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-6">
-                            <h6>About</h6>
-                            <p class="text-justify">Our restaurant is one of the most unique restaurants in the world. As in no other restaurant you will be able to visit the interior of the 4 seasons at once. The interior was designed by one of the best designer and architects.</p><br>
-                            <p>8 (708) 403 48 68
-                                Adress:
-                                Atyrau city, Qanysh Sätbayev Ave 36,
-                            </p>
-                        </div>
-                        <div class="col-xs-6 col-md-3">
-                            <h6>Quick Links</h6>
-                            <ul class="footer-links">
-                                <li><a target="_blank" href="#">Home</a></li>
-                                <li><a target="_blank" href="#men">Menu</a></li>
-                                <li><a target="_blank" href="#booking">Reservations</a></li>
-                                <li><a target="_blank" href="#aboutus">About us</a></li>
-                                <li><a target="_blank" href="#contact">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-sm-6 col-xs-12">
-                            <p class="copyright-text">Copyright &copy; 2020 Ranimy. All Rights Reserved by
-                                <a href="https://instagram.com/irmagaliev.r?igshid=8tijwkj1yunh">Irmagaliev Ramazam</a>.
-                            </p>
-                        </div>
-
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <ul class="social-icons">
-                                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-        </div>
-        <div id="map"></div>
-        <script>
-            function initMap() {
-                var options = {
-                    center: {
-                        lat: 47.10865240564806,
-                        lng: 51.90368333015063
-                    },
-                    zoom: 14,
-                    mapTypeId: "terrain"
-                }
-
-                var map = new google.maps.Map(document.getElementById("map"), options);
-
-                var icon = {
-                    url: "https://www.flaticon.com/svg/static/icons/svg/1949/1949165.svg",
-                    scaledSize: new google.maps.Size(40, 40), //scaled size
-                    origin: new google.maps.Point(0, 0), //origin
-                    anchor: new google.maps.Point(0, 0) //anchor
-                };
-
-                var marker = new google.maps.Marker({
-                    position: {
-                        lat: 47.10477671191444,
-                        lng: 51.90614285445543
-                    },
-                    map: map,
-                    icon: icon
-                });
-                var infowindow = new google.maps.InfoWindow({
-                    content: "Our store here"
-                });
-
-                google.maps.event.addListener(marker, 'click', function() {
-                    infowindow.open(map, marker);
-                });
-
-            }
-
-        </script>
-        <script src="/script.js"></script>
-
-
-    </div>
+</script>
 
 
 
-</body>
-
-</html>
+</body></html>
